@@ -1,5 +1,14 @@
 2006-07-25  Johan Bilien <johan.bilien@nokia.com>
 
+	Applied further fix to "Application switcher area does not immediately
+	reflect the state of the application" (Closes NB#35604)
+	* hildon-navigator/hn-app-button.c: Added method to force the update
+	  of the button icon
+	* hildon-navigator/hn-app-switcher.c: Force the update of the icon
+	  when a change occurs in an entry structure
+
+2006-07-25  Johan Bilien <johan.bilien@nokia.com>
+
 	* hildon-navigator/hn-wm-watched-window.c:
 	  - manually top a hildon-app when coming out of hibernation
 	  - various cleanups
